Modificato il codice: aggiunto il whatcher che controlla dinamicamente il file config.yaml e aggiorna i pin o i tempi in tempo reale.

--- a/confing.yaml
+++ b/confing.yaml
@@ -1,7 +1,9 @@
 log:
   directory: "./logs"
-  filename: "gpio_greenHouse.log"
+  filename: "gpio_controller.log"
   level: "INFO"
+
+config_reload_interval: 5   # secondi
 
 gpio_pins:
   - name: "AEROPONICS"
@@ -13,8 +15,3 @@ gpio_pins:
     pin: 27
     interval: 120
     on_time: 20
-
-  - name: "VENTILATION"
-    pin: 22
-    interval: 30
-    on_time: 5
