--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,9 @@
 T_var:
   Topt: 18
 
+dht22:
+  pin: 27
+
 log:
   directory: "./logs"
   filename: "gpio_controller.log"
@@ -18,3 +21,5 @@ gpio_pins:
     pin: 27
     interval: 120
     on_time: 20
+
+
