--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ dht22:
   pin: 27
 
 log:
-  directory: "./logs"
+  directory: "/Users/theo/Desktop/test/"
   filename: "gpio_controller.log"
   level: "INFO"
 
@@ -14,7 +14,7 @@ config_reload_interval: 4   # secondi
 gpio_pins:
   - name: "AEROPONICS"
     pin: 17
-    interval: 60
+    interval: 5
     on_time: 10
 
   - name: "IDROPONICS"
