Modificato il main.py. Ora questo è il codice da lanciare. Utilizza la classe helper_aeroGreenHouse.py con all'interno i moduli per eseguire l'irrigazione. Utilizza la libreria pyyaml per caricare il file di configurazione e selezionare i tempi.

--- a/config.yaml
+++ b/config.yaml
@@ -14,12 +14,13 @@ config_reload_interval: 4   # secondi
 gpio_pins:
   - name: "AEROPONICS"
     pin: 17
-    interval: 5
+    interval: 3
     on_time: 10
 
   - name: "IDROPONICS"
-    pin: 27
-    interval: 120
+    pin_pump: 27
+    pin_sensor: 15
+    interval: 2
     on_time: 20
 
 
