--- a/config.yaml
+++ b/config.yaml
@@ -1,31 +1,23 @@
 T_var:
-  Topt: 18
-
+  Topt: 18.0
 dht22:
   pin: 23
-
 log:
-  directory: "/home/fishnplants/Desktop/"
-  filename: "FnP_AeroGreenHouse.log"
-  level: "INFO"
-
-config_reload_interval: 4   # secondi
-
+  directory: /home/fishnplants/Desktop/
+  filename: FnP_AeroGreenHouse.log
+  level: INFO
+config_reload_interval: 4
 gpio_pins:
-  - name: "AEROPONICS"
-    pin: 17
-    what_type: "pump"
-    interval: 8
-    on_time: 3
-
-  - name: "IDROPONICS"
-    pin: 27
-    what_type: "pump"
-    interval: 6
-    on_time: 2
-
-  - name: "MOISTURE"
-    pin: 13
-    what_type: "sensor"
-
-
+- name: AEROPONICS
+  pin: 15
+  what_type: pump
+  interval: 8
+  on_time: 3
+- name: IDROPONICS
+  pin: 27
+  what_type: pump
+  interval: 6
+  on_time: 2
+- name: MOISTURE
+  pin: 13
+  what_type: sensor
