Aggiornata la GUI: aggiunto il tab Ambient con inserito il valore di temperatura, umidità e VPD

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ T_var:
   Topt: 18.0
 dht22:
   pin: 23
+  read_interval: 5
 log:
   directory: /home/fishnplants/Desktop/
   filename: FnP_AeroGreenHouse.log
