Log updated: now the log has a maximum time of 7 days. In the config.yaml file the direcotry is the dyrectory of the logs and the filename is the prefix of the log name, followed by the date

--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ dht22:
 
 log:
   directory: /home/fishnplants/Desktop/
-  filename: FnP_AeroGreenHouse.log
+  filename: FnP_AeroGreenHouse
   level: INFO
 
 config_reload_interval: 4
